--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
-  "express": "^4.19.2",
-  "dotenv": "^16.4.5",
-    "morgan": "^1.10.0",
-    "twilio": "^4.20.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "morgan": "^1.10.0"
   }
 }
