--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_hooks: ^0.20.5
   cupertino_icons: ^1.0.8
   flutter_dotenv: ^5.1.0
+  image_picker: ^1.0.8
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
